<resources>
    <string name="app_name">verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent_to_prelookstudio_gmail_com">Please type the verification code sent to prelookstudio@gmail.com</string>
    <string name="some_id_1">5</string>
    <string name="some_id_2">3</string>
    <string name="i_don_t_rec">I don\'t recevie a code! <font color="#FE724C"> Please resend </font></string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>